# auto_drive

./: README.md  pyproject.toml
app/: car.py  cli.py  constants.py  field.py  main.py  simulation.py
tests/: conftest.py  test_car.py  test_cli.py  test_field.py  test_simulation.py
