[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-driving-sim"
version = "0.1.0"
description = "CLI simulation"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
auto-drive = "app.main:start_simulation"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.optional-dependencies]
dev = ["pytest","pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
